# boadata

./: .gitignore  .pre-commit-config.yaml  HISTORY.rst  LICENSE  MANIFEST.in  Pipfile  README.md  README.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
boadata/: __init__.py  app.py
boadata/cli/: __init__.py
boadata/commands/: __init__.py  boacat.py  boaconvert.py  boadata.py  boadescribe.py  boahist.py  boaplot.py  boatable.py  boatree.py  boaview.py
boadata/core/: __init__.py  data_conversion.py  data_node.py  data_object.py  data_properties.py  data_source.py  data_tree.py  data_types.py  selectable_item_list.py
boadata/core/data_types/: __init__.py  data_types.py  field.py  selectable_item_list.py
boadata/data/: __init__.py  avro_types.py  csv_types.py  dw_types.py  excel_types.py  feather_types.py  field_types.py  geant4_types.py  hdf5_types.py  json_types.py  matlab_types.py  mixins.py  numpy_array.py  numpy_types.py  pandas_data_frame.py  pandas_types.py  parquet_types.py  plotting_types.py  pydataset_types.py  sql_types.py  text_types.py  wiki_types.py  xarray_types.py
boadata/gui/qt/: __init__.py  data_object_window.py  data_tree_model.py  data_tree_view.py  main_window.py  selectable_item_list_view.py
boadata/gui/qt/backends/: matplotlib.py  webkit.py
boadata/gui/qt/views/: __init__.py  bokeh_views.py  field_view.py  field_view_3d.py  histogram_view.py  html_views.py  pandas_summary.py  plot_view.py  property_view.py  table_view.py  text_view.py  view.py  xy_plot_view.py
boadata/gui/qt/widgets/: column_select.py
boadata/test/: boadata  dump_xls.py  qt_tree.py  tree.py
boadata/trees/: __init__.py  csv.py  dw.py  excel.py  field_table.py  file.py  generic.py  google_storage.py  hdf5.py  matlab.py  pydaset.py  sql.py
docs/: Makefile  api.rst  boadata.commands.rst  boadata.core.data_types.rst  boadata.core.rst  boadata.data.rst  boadata.gui.qt.backends.rst  boadata.gui.qt.rst  boadata.gui.qt.views.rst  boadata.gui.rst  boadata.rst  boadata.trees.rst  conf.py  index.rst  modules.rst  reference.rst
tests/: __init__.py
tests/core/: __init__.py
tests/data/: test_histograms.py  test_mixins.py  test_numpy.py  test_sql_types.py
tests/gui/: __init__.py  _core.py  selectable_item_list_view_test.py  test_selectable_item_list_view.py
tests/trees/: __init__.py  test_hdf5.py
