[project]
license = "MIT"
description = "(B)rother (O)f (A)rbitrary Data - Python CLI tools for data."
name = "boadata"
version = "0.4.2"
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [{ name = "Jan Pipek", email = "jan.pipek@gmail.com" }]
dependencies = [
    "numpy>1.21",
    "pandas>2.0",
    "scipy>=1.14.1",
    "blinker",
    "sqlalchemy",
    "numexpr",
    "click",
    "xarray",
    "scipy",
    "matplotlib",
    "seaborn",
    "tabulate",
    "physt",
    "typer",
    "textual",
    "clevercsv>=0.8.2",
    "textual-fastdatatable>=0.10.0",
    "polars>=1.33.1",
    "narwhals>=2.5.0",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
avro = ["fastavro"]
matlab = ["pydons"]
h5py = ["h5py"]
pydataset = ["pydataset"]
# feather = ["feather"]
excel = ["openpyxl", "xlrd"]
google-cloud = ["google-cloud-storage"]

[project.scripts]
boa-table = "boadata.commands.boatable:run_app"
boa-convert = "boadata.commands.boaconvert:run_app"
boa-describe = "boadata.commands.boadescribe:run_app"
boa-tree = "boadata.commands.boatree:run_app"
boa-cat = "boadata.commands.boacat:run_app"

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.uv]
package = true

[tool.ruff]
# Be a bit tolerant
# line-length = 100
extend-exclude = ["docs"]
target-version = "py39"

[tool.isort]
profile = "black"
